# jgbc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  imgui.ini  lxgbc.code-workspace  makefile
inc/: alu.h  apu.h  cart.h  cpu.h  debug.h  debugger.h  emu.h  font.h  gameboy.h  input.h  instr.h  jgbc.h  lxgbc.h  macro.h  main.h  mbc.h  mmu.h  ppu.h  ram.h  rom.h
inc/debugger/: colours.h  debugger.h  emulator.h  font.h  imconfig.h  liberation_mono.h  menu.h  menubar.h  modal_rom.h  window.h  window_audio.h  window_break.h  window_breakpoints.h  window_cart_info.h  window_controls.h  window_ctrl.h  window_disasm.h  window_disassembly.h  window_emu.h  window_emulator.h  window_io.h  window_io_map.h  window_mem.h  window_memory.h  window_palettes.h  window_perf.h  window_reg.h  window_registers.h  window_stack.h
inc/debugger/windows/: breakpoints.h  cart_info.h  controls.h  disassembly.h  framebuffer.h  io.h  memory.h  palettes.h  registers.h  serial.h  stack.h
lib/glad/: glad.c  glad.h
lib/imgui/: imconfig.h  imgui.cpp
lib/imgui_dock/: imgui_dock.cpp  imgui_dock.h
lib/imgui_impl/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
lib/imgui_plot/: imgui_plot.cpp  imgui_plot.h
src/: alu.c  apu.c  cart.c  cpu.c  cpu.h  debug.cpp  debugger.c  debugger.h  display.c  display.h  emu.c  gameboy.c  gpu.c  gpu.h  input.c  instr.c  instr.h  interrupt.c  jgbc.c  lxgbc.c  lxgbc.h  main.c  mbc.c  mbc.h  mmu.c  olddebugger.c  ppu.c  ppu.h  ram.c  ram.h  rom.c  rom.h  sound.c
src/debugger/: colours.cpp  debugger.cpp  glad.c  imgui_impl_opengl3.cpp  jgbc.cpp  main.cpp  menu.cpp  menubar.cpp  modal_rom.cpp  window.cpp  window_audio.cpp  window_break.cpp  window_breakpoints.cpp  window_cart_info.cpp  window_controls.cpp  window_ctrl.cpp  window_disasm.cpp  window_disassembly.cpp  window_emu.cpp  window_emulator.cpp  window_io.cpp  window_io_map.cpp  window_mem.cpp  window_memory.cpp  window_palettes.cpp  window_perf.cpp  window_reg.cpp  window_registers.cpp  window_stack.cpp
src/debugger/windows/: breakpoints.cpp  cart_info.cpp  controls.cpp  disassembly.cpp  framebuffer.cpp  io.cpp  memory.cpp  palettes.cpp  registers.cpp  serial.cpp  stack.cpp
